# my_server

./: CMakeLists.txt  run.sh
server/: CMakeLists.txt
server/include/: active_hosts_stack.h  connect_pipe.h  connection_work_func.h  data_base_stack.h  data_base_work.h  debugging.h  descr_sending_funcs.h  msg_ipc.h  request_check_func.h  request_handle_func.h  request_stack.h  sem_sync.h  server_start.h  sig_handlers.h  structs.h  user_work_func.h  work_with_users.h
server/src/: active_hosts_stack.c  connect_pipe.c  connection_work_func.c  data_base_stack.c  data_base_work.c  descr_sending_funcs.c  logging.c  main.c  msg_ipc.c  request_check_func.c  request_stack.c  requests_handle_func.c  sem_sync.c  server_start.c  sig_handlers.c  user_work_func.c  work_with_users.c
